# playfair-cracker

./: ARCHITETTURA_SISTEMA_CRITTANALISI.md  CORE_BLOCKS_DEEP_DIVE.md  GUIDA_CORE_BLOCKS.md  INDICE_DOCUMENTAZIONE.md  LICENSE  README.md  pyproject.toml  run_cracker.sh
docs/: index.html  msb_half_stego_text_lab.html  playfair-digram-lab-config-final.json  playfair-digram-lab-config-initial.json  playfair_digram_lab_v30.html
notebooks/: analisi_crittoanalitica_crittogramma.ipynb  convert_md.sh  convert_pdf.sh  crittogramma.txt  playfair_anomaly_analysis.ipynb
specs/: cracker_01.md  cracker_02.md  cracker_03.md
src/playfair_cracker/: __init__.py  __main__.py  annealing.py  cli.py  config.py  decode.py  initial_key.py  numba_core.py  parallel.py  preprocessing.py  reporting.py  utils.py  validation.py
tools/: playfair-digram-lab-config-intermedio.json  playfair_digram_lab_v30.md
