[project]
name = "playfair-cracker"
version = "0.1.0"
description = "Playfair cipher cracker using Simulated Annealing with n-gram scoring"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "tqdm>=4.65.0",
    "pandas>=2.3.3",
    "ipykernel>=6.31.0",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
